cmake_minimum_required(VERSION 3.17)
project(LeetCode C)

set(CMAKE_C_STANDARD 99)

#target_include_directories(/support/*)

add_executable(demo /${CMAKE_SOURCE_DIR}/support/demo.c)
add_executable(main1 main.c)
add_executable(14 leet14.c)
add_executable(15 leet15.c)
add_executable(456 leet456.c)
add_executable(12 leet12.c)
add_executable(82 leet82.c)
add_executable(83 leet83.c)
add_executable(16 leet16.c)
add_executable(17 leet17.c)
add_executable(61 leet61.c)
add_executable(50 leet50.c)
add_executable(20 leet20.c)
add_executable(27 leet27.c)
add_executable(28 leet28.c)