cmake_minimum_required(VERSION 3.17)
project(LeetCode C)

set(CMAKE_C_STANDARD 99)

#target_include_directories(/support/*)

add_executable(demo ${CMAKE_SOURCE_DIR}/support/demo.c)
add_executable(main1 main.c)
add_executable(12 q1-50/leet12.c)
add_executable(14 q1-50/leet14.c)
add_executable(15 q1-50/leet15.c)
add_executable(16 q1-50/leet16.c)
add_executable(17 q1-50/leet17.c)
add_executable(19 q1-50/leet19.c)
add_executable(20 q1-50/leet20.c)
add_executable(21 q1-50/leet21.c)
add_executable(23 q1-50/leet23.c)
add_executable(27 q1-50/leet27.c)
add_executable(28 q1-50/leet28.c)
add_executable(42 q1-50/leet42.c)
add_executable(50 q1-50/leet50.c)

add_executable(82 q51-100/leet82.c)
add_executable(83 q51-100/leet83.c)
add_executable(61 q51-100/leet61.c)
add_executable(74 q51-100/leet74.c)

add_executable(456 leet456.c)
add_executable(1006 leet1006.c)