
add_executable(12 leet12.c)
add_executable(14 leet14.c)
add_executable(15 leet15.c)
add_executable(16 leet16.c)
add_executable(17 leet17.c)
add_executable(19 leet19.c)
add_executable(20 leet20.c)
add_executable(21 leet21.c)
add_executable(23 leet23.c)
add_executable(27 leet27.c)
add_executable(28 leet28.c)
add_executable(42 leet42.c)
add_executable(50 leet50.c)